New feature: Fenix Framework now considers the existence of DML files inside jar libraries